# learning-exps

./: .env  .gitignore  README.md  docker-compose.yaml  makefile
.github/workflow/: deploy.yaml
.github/workflows/: deploy.yaml
core-spring-service/: .gitignore  Dockerfile  dep-tree.txt  effective-pom.xml  pom.xml
core-spring-service/src/main/resources/: application-dev.properties  application.properties  logback-spring.xml
deli/: Dockerfile  main.py
infra/: README.md  workflow-template.yaml
infra/cdk/: cdk.json  pom.xml
infra/scripts/: regression.sh  stack.sh
log-viewer/: Makefile  README.md  app.py  requirements.txt
log-viewer/static/: app.js  styles.css  tracking.js
log-viewer/templates/: index.html  tracking.html
producer-service/: Dockerfile  pom.xml
tracking_compose/: README.md
tracking_compose/backend/: README.md  pyproject.toml
tracking_compose/backend/src/tracking_compose_backend/: config.py  main.py
tracking_compose/backend/src/tracking_compose_backend/api/: dependencies.py  health.py  services.py  telemetry.py  topology.py  traces.py
tracking_compose/backend/src/tracking_compose_backend/services/: compose_manager.py  health_monitor.py  models.py  telemetry_aggregator.py  trace_service.py
tracking_compose/backend/src/tracking_compose_backend/utils/: diagnostics.py  logging.py
tracking_compose/frontend/: index.html  package.json  tsconfig.node.json  vite.config.ts
tracking_compose/frontend/src/: App.tsx  config.ts  styles.css
ui/: Dockerfile  index.html  package.json  vite.config.js
ui/src/: App.jsx  styles.css
(+49 files in other folders)
