[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracking-compose-backend"
version = "0.1.0"
description = "Local daemon for the Dockhand tracking compose utility"
requires-python = ">=3.10"
authors = [
  { name = "Dockhand Team" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "docker>=7.0",
  "httpx>=0.27",
  "rich>=13.7",
  "prometheus-client>=0.20"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.8"
]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "C4", "N"]

[tool.ruff.lint.isort]
known-first-party = ["tracking_compose_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
